# payme-uz

./: .coveragerc  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-tests.yml
examples/: example.py
src/payme/: client.py  enums.py  log.py  service.py
tests/: test_payme_client.py  test_payme_service.py
